2011-04-22  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* update_README.sh:

	- Avod recursing into directories. This avoids that it finds the
	*Toolbox directories in bin/

	* Move itk functions to new ItkToolbox directory

	- FiltersToolbox/ItkImFilter.cpp
	- FiltersToolbox/CMakeLists.txt
	- FiltersToolbox/itk_imfilter.m
	- PointsToolbox/ItkKernelTransform.cpp
	- PointsToolbox/CMakeLists.txt
	- PointsToolbox/itk_kernel_transform.m
	- CMakeLists.txt

	* Add new directory ItkToolbox

	* Add FiltersToolbox/ItkImFilter.cpp,
	FiltersToolbox/CMakeLists.txt, FiltersToolbox/itk_imfilter.m:

	- ITK_IMFILTER: Run ITK filter on a 2D or 3D image.

	- This is also a big development in the project, because even
	though this function currently implements only the skeleton
	filter, it is templated so that it can use many of Matlab's matrix
	classes (double, boolean, uint8, etc), and it's generic enough
	that adding new filters should be easy.

	* CMakeLists.txt:

	- Build new function itk_imfilter().

2011-04-21  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add some test data to matlab/test

	- bent-vessel-2d.mat
	- veins-tree-blob.mat
	- veins-tree-blob.mha
	- veins-tree-blob-skeleton.mat
	- veins-tree-blob-skeleton.mha

	* Add PointsToolbox/pts_local_rigid.m: v0.1.0

	- PTS_LOCAL_RIGID Non-rigid transformation that is locally rigid
	between two sets of points with known correspondence.

	* FileFormatToolbox/scinrrd_world2index.m: v0.2.1

	- Add default for CHOP input argument.

2011-04-20  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add FiltersToolbox/landlocked_stats.m: v0.1.0

	- LANDLOCKED_STATS Assess whether sections of voxels are
	surrounded by other sections (land) or by background (water).

	* Add PointsToolbox/ItkKernelTransform.cpp,
	PointsToolbox/itk_kernel_transform.m: v0.1.0

	- ITK_KERNEL_TRANSFORM ITK warps between 3D point sets with a
	known correspondence.

	* Add CMakeLists.txt, PointsToolbox/CMakeLists.txt,
	MatlabMakeMacros.cmake:
